[project]
name = "plux-recording"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "streamlit>=1.39.0",
    "altair>=5.4.1",
    "pandas>=2.2.3",
    "streamlit-desktop-app>=0.3.4",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
